css/main_mobile.css
/*
    Shrink the page! Do it!
*/

@media only screen and (max-width: 64.063em) {
 /*
        Default Styles
    */

    body {
        height:100vh;
    }

    /*
        Navigation
    */

    .nav {
        padding: 8px 0;
        background-color: black
    }
    .nav ul li a {
        padding: 5px 10px;
    }


    /*
        Home
    */

    #home {
        height: auto !important;
        background:url("../img/plants.jpg");
        background-position: top left;
        background-attachment: fixed;
        background-size: 160%;
        margin: 0;
    }

    #homecontent {
        width: 60%;
        padding: 3%;
        margin: 0 auto;
        opacity: 1 !important;
    }

    #home #prof {
        width:200px !important;
    }

    #social-icons {margin-bottom: 2%}
    #home i { font-size: 1.8rem }

    /*
        About Page
    */

    #about {
        height:auto;
    }
    #aboutcontent {
        height: auto;
        display: inherit !important;
        margin: 12% auto;
        font-size: 3vh;
        width:65%;
    }


    /*

        Header

    */

    #header {
        height: auto !important;
        background:url("../img/plants.jpg");
        background-position: top right;
        background-attachment: fixed;
        background-size: 160%;
        width:100%;
        padding: 0;
    }

    #headercontent {
        width: 40%;
        padding: 3%;
        margin: 0 auto;
    }

    #header ul {
        margin: 0 auto;
    }

    /*

        Portfolio Content
    */

    .entry {
        text-align: center;
    }

    .entry p {
        margin:7% 0;
    }

    .btn {
        position: initial;
    }

    .description {
        width: 100%;
        margin:0;
    }


}


/*
	Go to the site on your phone! Do it!
*/
@media only screen and (max-width: 40em) {
     /*
        Default Styles
    */

    body {
        background-image: none;
        background-color: black !important;
        height:auto;
        overflow: scroll;
    }

    /*
        Navigation
    */

    .nav {
        padding: 0;
        background-color: black;
        margin: 0 auto;
        display: flex;
    }

    .nav ul {
        display:inherit;
        margin: 0 auto;
    }
    .nav ul li a {
        padding: 15px 10px;
    }

    /*
        Home
    */

    #home {
        height:auto !important;
        width: inherit !important;
        background-color: black !important;
    }

    #homecontent {
        width: inherit;
        margin:0;
        background-color: black;
        opacity: 1 !important;

    }

    #home #prof {
        width:250px !important;
    }

    #home li { margin: 0 5px }
    #home i { font-size: 1.8rem }
    /*
        About Page
    */

    #about {
        height:auto;
    }

    #aboutcontent {
        width: 80%;
        text-align: left;
    }

    #aboutcontent p {
        font-size: 3.4vh;
    }

    /*
        Header
    */

    #header {
        height:auto !important;
        width: inherit !important;
        background-color: black !important;
        padding: 0;
    }

    #headercontent {
        width: inherit;
        margin:0;
        background-color: black;
    }

    /*

        Portfolio Content
    */

    .entry {
        text-align: center;
    }

    .entry h1 {
        font-size: 30px;
    }

    .entry p {
        font-size: 15px;
        margin: 10% 0;
    }

    .btn {
        position: initial;
    }

    .description {
        width: 100%;
        margin:0;
    }


}

